Course, RunningRecord 관련 기능 추가