@@ -1,17 +1,14 @@
 package cse.jaejin.running.service;
 
-import cse.jaejin.running.domain.Course;
-import cse.jaejin.running.domain.LocationPoint;
-import cse.jaejin.running.domain.User;
-import cse.jaejin.running.dto.CourseDetailDto;
-import cse.jaejin.running.dto.CourseDto;
-import cse.jaejin.running.repository.CourseRepository;
-import cse.jaejin.running.repository.UserRepository;
+import cse.jaejin.running.domain.*;
+import cse.jaejin.running.dto.*;
+import cse.jaejin.running.repository.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,49 +16,104 @@ public class CourseService {
 
     private final CourseRepository courseRepository;
     private final UserRepository userRepository;
+    private final RunningRecordRepository runningRecordRepository;
 
-    public Optional<Long> saveCourse(CourseDto dto) {
-        Optional<User> userOpt = userRepository.findById(dto.getUserId());
-        if (userOpt.isEmpty()) return Optional.empty();
+    /**
+     * 러닝 기록(RunningRecord)을 기반으로 코스를 생성하는 메서드
+     */
+    @Transactional
+    public Long createCourseFromRunningRecord(CreateCourseFromRecordRequest request) {
+        // 사용자 정보 조회 (예외 발생 시 404 대체용 예외 처리)
+        User user = userRepository.findById(request.getUserId())
+                .orElseThrow(() -> new IllegalArgumentException("User not found"));
 
+        // 러닝 기록 조회
+        RunningRecord record = runningRecordRepository.findById(request.getRunningRecordId())
+                .orElseThrow(() -> new IllegalArgumentException("RunningRecord not found"));
+
+        // 새로운 Course 엔티티 생성
         Course course = new Course();
-        course.setUser(userOpt.get());
-        course.setDistance(dto.getDistance());
-        course.setDuration(dto.getDuration());
-        course.setStartTime(dto.getStartTime());
-        course.setEndTime(dto.getEndTime());
+        course.setUser(user);  // 사용자 설정
+        course.setDistance(calculateDistance(record));  // 거리 계산 (추후 구현 필요)
+        course.setCourseTitle(request.getCourseTitle());
 
-        if (dto.getPoints() != null) {
-            for (CourseDto.LocationPointDto p : dto.getPoints()) {
-                LocationPoint point = new LocationPoint();
-                point.setLatitude(p.getLatitude());
-                point.setLongitude(p.getLongitude());
-                point.setTimestamp(p.getTimestamp());
-                course.addPoint(point);
-            }
+        // 러닝 기록의 좌표를 CourseLocationPoint로 복사하여 Course에 추가
+        for (RunningLocationPoint rp : record.getPoints()) {
+            CourseLocationPoint cp = new CourseLocationPoint();
+            cp.setLatitude(rp.getLatitude());
+            cp.setLongitude(rp.getLongitude());
+            course.addPoint(cp);  // 연관관계 편의 메서드로 연결
         }
 
-        Course saved = courseRepository.save(course);
-        return Optional.of(saved.getId());
+        // 저장 후 생성된 코스의 ID 반환
+        return courseRepository.save(course).getId();
     }
 
-    public CourseDetailDto convertToDetailDto(Course course) {
-        CourseDetailDto dto = new CourseDetailDto();
+    /**
+     * 러닝 기록으로부터 총 거리를 계산하는 로직 (현재는 더미값, 추후 좌표 거리 계산 알고리즘 적용 예정)
+     */
+    private double calculateDistance(RunningRecord record) {
+        return 0.0; // TODO: Haversine 공식을 이용한 거리 계산 추가 예정
+    }
+
+    /**
+     * ID로 단일 코스를 조회하여 DTO로 변환
+     */
+    @Transactional(readOnly = true)
+    public CourseResponseDto getCourse(Long courseId) {
+        Course course = courseRepository.findById(courseId)
+                .orElseThrow(() -> new IllegalArgumentException("Course not found"));
+
+        return convertToDto(course);
+    }
+
+    /**
+     * 전체 코스 목록을 조회하여 DTO 리스트로 반환
+     */
+    @Transactional(readOnly = true)
+    public List<CourseResponseDto> getAllCourses() {
+        return courseRepository.findAll().stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * 특정 사용자(userId)가 생성한 코스 목록을 조회
+     */
+    @Transactional(readOnly = true)
+    public List<CourseResponseDto> getCoursesByUser(Long userId) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+
+        return courseRepository.findByUser(user).stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
+    }
+
+    public List<CourseResponseDto> searchByCourseTitle(String courseTitle) {
+        List<Course> courses = courseRepository.findByCourseTitleContainingIgnoreCase(courseTitle);
+        return courses.stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * Course 엔티티를 CourseResponseDto로 변환하는 내부 메서드
+     */
+    private CourseResponseDto convertToDto(Course course) {
+        CourseResponseDto dto = new CourseResponseDto();
+        dto.setId(course.getId());
         dto.setUserId(course.getUser().getId());
         dto.setDistance(course.getDistance());
-        dto.setDuration(course.getDuration());
-        dto.setStartTime(course.getStartTime());
-        dto.setEndTime(course.getEndTime());
+        dto.setCourseTitle(course.getCourseTitle());
 
-        List<CourseDetailDto.LocationPointDto> pointDtos = course.getPoints().stream()
-                .map(point -> {
-                    CourseDetailDto.LocationPointDto pdto = new CourseDetailDto.LocationPointDto();
-                    pdto.setLatitude(point.getLatitude());
-                    pdto.setLongitude(point.getLongitude());
-                    pdto.setTimestamp(point.getTimestamp());
-                    return pdto;
-                })
-                .toList();
+        // 위치 좌표 리스트를 DTO로 변환
+        List<LocationPointDto> pointDtos = course.getPoints().stream().map(p -> {
+            LocationPointDto pd = new LocationPointDto();
+            pd.setLatitude(p.getLatitude());
+            pd.setLongitude(p.getLongitude());
+            return pd;
+        }).collect(Collectors.toList());
 
         dto.setPoints(pointDtos);
         return dto;
